--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vite": "^5.0.0"
   },
   "dependencies": {
-    "firebase": "^10.14.1"
+    "firebase": "^10.14.1",
+    "react-icons": "^5.3.0"
   }
 }
